<resources>
    <string name="app_name">Github Demo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="trending">Trending</string>
    <string name="users">Users</string>
    <string name="save">Save</string>
    <string name="flowers">Flowers</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
</resources>
